# postgres

./: .cirrus.yml  configure  configure.ac  meson.build  meson_options.txt
contrib/: Makefile  meson.build
contrib/amcheck/: verify_nbtree.c
contrib/citext/expected/: citext_utf8.out  citext_utf8_1.out
contrib/citext/sql/: citext_utf8.sql
contrib/dblink/: Makefile  dblink--1.2--1.3.sql  dblink--1.3.sql  dblink.c  dblink.control  meson.build
contrib/fuzzystrmatch/: daitch_mokotoff.c  dmetaphone.c  fuzzystrmatch.c
contrib/icu_multilib/: Makefile  icu_multilib--1.0.sql  icu_multilib.c  icu_multilib.control  meson.build
contrib/ltree/: crc32.c  lquery_op.c  ltree.h  ltxtquery_op.c
contrib/pg_walinspect/: pg_walinspect.c
contrib/postgres_fdw/: Makefile  connection.c  meson.build  postgres_fdw--1.1--1.2.sql
contrib/postgres_fdw/expected/: postgres_fdw.out
contrib/postgres_fdw/sql/: postgres_fdw.sql
contrib/postgres_fdw/t/: 010_subscription.pl
doc/src/sgml/: amcheck.sgml  catalogs.sgml  charset.sgml  config.sgml  contrib.sgml  filelist.sgml  func.sgml  icu-multilib.sgml  installation.sgml  logical-replication.sgml  postgres-fdw.sgml  user-manag.sgml
src/: Makefile.global.in
src/backend/catalog/: Makefile  aclchk.c  index.c  namespace.c  pg_collation.c  pg_proc.c  pg_subscription.c  system_functions.sql
src/backend/commands/: analyze.c  cluster.c  collationcmds.c  createas.c  dbcommands.c  foreigncmds.c  functioncmds.c  indexcmds.c  matview.c  policy.c  subscriptioncmds.c  tablecmds.c  trigger.c  user.c  vacuum.c
src/backend/executor/: execGrouping.c  execUtils.c  nodeAgg.c  nodeRecursiveunion.c  nodeSetOp.c  nodeSubplan.c  spi.c
src/backend/foreign/: foreign.c
src/backend/libpq/: auth-scram.c  auth.c  crypt.c
src/backend/main/: main.c
src/backend/parser/: gram.y  scansup.c
src/backend/partitioning/: partdesc.c
src/backend/regex/: regc_locale.c  regc_pg_locale.c
src/backend/replication/: walsender.c
src/backend/statistics/: Makefile  attribute_stats.c  import_stats.c  meson.build  relation_stats.c  stat_utils.c
src/backend/tsearch/: dict_synonym.c  spell.c  ts_locale.c  wparser_def.c
src/common/: Makefile  meson.build  saslprep.c  unicode_case.c  unicode_category.c  wchar.c
src/common/unicode/: Makefile  case_test.c  category_test.c  generate-unicode_case_table.pl  generate-unicode_category_table.pl  meson.build
src/fe_utils/: mbprint.c
src/include/: c.h  pg_config.h.in  port.h
src/include/catalog/: catversion.h  meson.build  namespace.h  pg_authid.h  pg_collation.h  pg_database.h  pg_foreign_data_wrapper.h  pg_foreign_server.h  pg_proc.h  pg_subscription.h
src/include/commands/: collationcmds.h  dbcommands.h
src/include/common/: unicode_case.h  unicode_case_table.h  unicode_category.h  unicode_category_table.h
src/include/executor/: executor.h  nodeAgg.h  tuptable.h
src/include/foreign/: foreign.h
src/include/lib/: simplehash.h
src/include/mb/: pg_wchar.h
src/include/nodes/: execnodes.h  parsenodes.h
src/include/replication/: walreceiver.h
src/include/statistics/: stat_utils.h  statistics.h
src/include/utils/: guc.h  guc_hooks.h  guc_tables.h  pg_locale.h  pg_locale_internal.h  pg_nls.h  relcache.h  usercontext.h  varlena.h
src/makefiles/: meson.build
src/port/: pgstrcasecmp.c  snprintf.c
src/test/modules/: Makefile  meson.build
src/test/modules/test_collation_lib_hooks/: Makefile  meson.build  test_collation_lib_hooks.c  test_collation_lib_hooks.control  test_collation_lib_hooks.h  test_icu_hook.c  test_libc_hook.c
src/test/modules/test_collation_lib_hooks/t/: 001_icu.pl  001_libc.pl  002_icu.pl  002_libc.pl  003_libc_mixed_collation.pl  004_libc_version.pl
src/test/modules/test_collator_lib_hooks/: Makefile  meson.build  test_collator_lib_hooks.c  test_collator_lib_hooks.h  test_icu_hook.c
src/test/modules/test_collator_lib_hooks/t/: 001_icu.pl
src/test/regress/: parallel_schedule  regress.c
src/tools/: Ranges.pm
src/tools/pg_bsd_indent/: err.c
src/tools/pginclude/: cpluspluscheck
(+99 files in other folders)
